--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/estilos-plantas.css">
+        <link rel="shortcut icon" type="image/png" href="imagens/favicon.png"/>
         <meta charset="UTF-8">
         <title>Plantas Carnívoras</title>
     </head>
