--- a/loja.html
+++ b/loja.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/estilos-loja.css">
+        <link rel="shortcut icon" type="image/png" href="imagens/favicon.png"/>
         <meta charset="UTF-8">
         <title>Loja de Sementes</title>
     </head>
